manifests/backend/deployment.yml
apiVersion: apps/v1
#отвечает за запуск и обновление pod’ов
kind: Deployment
#Имя Deployment’а в Kubernetes
metadata:
  name: history-care-backend
spec:
  replicas: 1
  selector:
    matchLabels:
    #ищет pod’ы с label
      app: history-care-backend
      #какие контейнеры запускать, какие переменные окружения дать, какие порты открыть
  template:
  #Эти labels будут у pod’а
    metadata:
      labels:
        app: history-care-backend
        #Описание содержимого pod
    spec:
    #контейнеры, которые запускаются до основного backend-контейнера
      containers:
        - name: history-care-backend
        #В манифесте стоит latest, но в pipeline он заменяется на тег коммита
          image: history-care-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          env: *backend-env
