manifests/backend/ingress.yml
# Версия API для Ingress
apiVersion: networking.k8s.io/v1
# Ресурс для внешнего HTTP-доступа к сервису
kind: Ingress
metadata:
  # Имя Ingress в Kubernetes
  name: history-care-backend-ingress
spec:
  rules:
    # Домен, по которому будет доступен backend
    - host: api.history-care.ru
      http:
        paths:
          # Все запросы с этого домена идут в backend
          - path: /
            pathType: Prefix
            backend:
              service:
                # Внутренний Service backend'а
                name: history-care-backend
                port:
                  # Порт backend-сервиса
                  number: 8080
